# good-explorer

./: .gitignore  README.md  debug_scraper.py  pyproject.toml  render.yaml  test_api.py  test_e2e.py  test_matching.py  test_scrapers.py
.kiro/steering/: workflow-preferences.md
app/: __init__.py  comparator.py  main.py
app/bots/: __init__.py  formatter.py  slack_bot.py  telegram_bot.py  whatsapp_bot.py
app/channels/: __init__.py  formatter.py  notifier.py  slack_bot.py  telegram_bot.py  whatsapp_bot.py
app/scrapers/: __init__.py  amazon.py  base.py  bigbasket.py  blinkit.py  flipkart.py  google_shopping.py  playwright_scraper.py  price_engine.py  zepto.py
app/static/: index.html
docs/: channels-setup.md
goodexplorer/: __init__.py  app.py  comparator.py  models.py
goodexplorer/scrapers/: __init__.py  amazon.py  base.py  bigbasket.py  blinkit.py  flipkart.py  jiomart.py  zepto.py
goodexplorer/static/: index.html
tests/: __init__.py  test_bots.py  test_channels.py  test_comparator.py
