[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "good-explorer"
version = "0.1.0"
description = "Compare grocery prices across Amazon, Flipkart, Blinkit, BigBasket, Zepto, JioMart"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx",
]

[project.scripts]
good-explorer = "goodexplorer.app:main"

[tool.setuptools.packages.find]
include = ["goodexplorer*"]

[tool.setuptools.package-data]
goodexplorer = ["static/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
