[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "good-explorer"
version = "0.1.0"
description = "Smart Grocery Price Comparison — compare prices across Amazon, Flipkart, Blinkit, BigBasket, Zepto"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-sdk>=3.0"]
whatsapp = ["twilio>=9.0"]
bots = [
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.0",
    "twilio>=9.0.0",
]
channels = [
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.0",
    "twilio>=9.0",
]

[project.scripts]
good-explorer = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
